--- a/Ejercicio 3 en 1.html
+++ b/Ejercicio 3 en 1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Ejercicio de selectores 1</title>
-    <link rel="stylesheet" href="Ejercicio 1.css">
+    <link rel="stylesheet" href="Ejercicio 3 en 1.css">
 </head>
 
 <body>
