--- a/Ejercicio 3 en 2.html
+++ b/Ejercicio 3 en 2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Ejercicio de selectores 2</title>
-    <link rel="stylesheet" href="Ejercicio 2.css">
+    <link rel="stylesheet" href="Ejercicio 3 en 2.css">
 </head>
 
 <body>
