--- a/Ejercicio 3 en 1.html
+++ b/Ejercicio 3 en 1.html
@@ -18,7 +18,7 @@
                 varius luctus,</span> metus massa tristique massa, in imperdiet est velit vel magna. Phasellus erat.
             Duis risus. <a href="#">Maecenas dictum</a>, nibh vitae pellentesque auctor, tellus velit consectetuer
             tellus, tempor pretium felis tellus at metus.</p>
-        <p>Cum sociis natoque <em class="especial">penatibus et magnis</em> dis parturient montes, nascetur ridiculus
+        <p id="importante">Cum sociis natoque <em class="especial">penatibus et magnis</em> dis parturient montes, nascetur ridiculus
             mus. Proin aliquam convallis ante. Pellentesque habitant morbi tristique senectus et netus et malesuada
             fames ac turpis egestas. Nunc aliquet. Sed eu metus. Duis justo.</p>
         <p>Donec facilisis blandit velit. Vestibulum nisi. Proin volutpat,<em
