--- a/Ejercicio 3 en 2.html
+++ b/Ejercicio 3 en 2.html
@@ -26,10 +26,12 @@
                 href="https://es.wikipedia.org/wiki/HTML">HTML</a>) y con las <em class="especial">Hojas de estilo en
                 cascada</em> (<span>Cascading Style Sheets</span>, <a href="https://es.wikipedia.org/wiki/CSS">CSS</a>).
         </p>
+    <div id="tres">
         <p>Este libro es <em>adecuado para cualquiera que tenga interés en aprender a desarrollar sus propias páginas
                 web</em>. No son necesarios conocimientos previos para aprender con este libro, lo único que es
             necesario es saber utilizar un ordenador y saber navegar por la Web</p>
     </div>
+    </div>
 </body>
 
-</html>S
+</html>
