--- a/PRÁCTICA5/Ejercicio4.html
+++ b/PRÁCTICA5/Ejercicio4.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>Ejercicio 4</title>
     <script src="Ejercicio4.js"></script>
+    <link rel="stylesheet" href="Ejercicio4.css">
 </head>
 
 <body>
