--- a/PÁGINA WEB PROYECTO FINAL/vista1.html
+++ b/PÁGINA WEB PROYECTO FINAL/vista1.html
@@ -13,7 +13,7 @@
 
         <p id="titulo">EL CHILE NEGRO</p>
 
-        <p id="menu">Inicio Carta Equipo Eventos Reserva </p>
+        <p id="menu">Inicio Carta Equipo Eventos Reserva</p>
 
     </header>
 
@@ -21,16 +21,33 @@
         
         <section id="foco1">EL CHILE NEGRO</section>
 
-        <div id="imagenes">
+        <div>
             <img src="plato1.jpg" alt="comida 1">
             <img src="plato2.png" alt="comida 2">
             <img src="plato3.jpeg" alt="comida 3">
         </div>
 
+        <section id="descripcion">Esto es una descripción del restaurante y su origen</section>
+
+        <section class="flex-container">
+            <div class="item">
+                Caja 1
+            </div>
+            <div class="item">
+                Caja 2
+            </div>
+            <div class="item">
+                Caja 3
+            </div>
+            <div class="item">
+                Caja 4
+            </div>
+        </section>
+
     </main>
 
     <footer>
-        <div id="texto_footer"><br>&#169; Laura Hernández (2024)<br>
+        <div id="texto_footer"><br>&nbsp; &#169; Laura Hernández (2024)<br>
         <a href="mailto:lhermon962@g.educaand.es">lhermon962@g.educaand.es</a>
         </div>
     </footer>
