--- a/PÁGINA WEB PROYECTO FINAL/vista1.html
+++ b/PÁGINA WEB PROYECTO FINAL/vista1.html
@@ -30,17 +30,14 @@
         <section id="descripcion">Esto es una descripción del restaurante y su origen</section>
 
         <section class="flex-container">
-            <div class="item">
+            <div class="item" id="caja1">
                 Caja 1
             </div>
-            <div class="item">
+            <div class="item" id="caja2">
                 Caja 2
             </div>
-            <div class="item">
+            <div class="item" id="caja3">
                 Caja 3
-            </div>
-            <div class="item">
-                Caja 4
             </div>
         </section>
 
