proyecto falta vista equipo

--- a/PF/inicio.html
+++ b/PF/inicio.html
@@ -40,9 +40,10 @@
                 <img src="imagenes/plato4.jpg" alt="comida 4">
             </div>
             <h1 id="foco">¡Bienvenidos al restaurante El Chile Verde!</h1>
+            
         </section>
 
-        <section class="texto_cuerpo">
+        <section id="texto_cuerpo">
             <p id="intro">El Chile Verde es más que un restaurante; es un rincón acogedor donde el sabor auténtico de la comida 
                 mexicana se une con la calidez del hogar. <br>Ubicado en el corazón del barrio, este espacio fue diseñado pensando en 
                 las familias que buscan una comida deliciosa, asequible y llena de tradición.<br>
