PROYECTO FINAL TERMINADOP

--- a/PF/equipo.html
+++ b/PF/equipo.html
@@ -30,8 +30,75 @@
     </header>
 
     <main>
+
+        <p id="intro">Un poco de música mientras conoces a nuestro equipo:</p>
         
-        <p>Esta vista es para el equipo</p>
+        <audio controls>
+            <source src="audio/audio.mp3" type="audio/mpeg"/>
+            <source src="audio/audio.ogg" type="audio/ogg"/>
+        </audio>
+        
+
+        <div>
+            <section>
+                <h2>NUESTROS CAMAREROS</h2>
+                <div class="imagen">
+                    <h3>Luisa</h3>
+                    <img src="imagenes/camareraluisa.jpg" alt="camarera Luisa">
+                </div>
+                <div class="imagen">
+                    <h3>Francisco</h3>
+                    <img src="imagenes/camarerofrancisco.webp" alt="camarero Francisco">
+                </div>
+                <div class="imagen">
+                    <h3>Gabriel</h3>
+                    <img src="imagenes/camarerogabriel.jpg" alt="camarero Gabriel">
+                </div>
+            </section>
+
+            <section>
+                <h2>NUESTROS COCINEROS</h2>
+                <div class="imagen">
+                    <h3>Juana</h3>
+                    <img src="imagenes/cocinerajuana.jpg" alt="cocinera Juana">
+                </div>
+                <div class="imagen">
+                    <h3>Jorge</h3>
+                    <img src="imagenes/cocinerojorge.webp" alt="cocinero Jorge">
+                </div>
+                <div class="imagen">
+                    <h3>Pedro</h3>
+                    <img src="imagenes/cocineropedro.jpg" alt="cocinero Pedro">
+                </div>
+            </section>
+
+            <section>
+                <h2>NUESTRA DESARROLLADORA WEB</h2>
+                <div class="imagen">
+                    <h3>Atún</h3>
+                    <img src="imagenes/atun.jpeg" alt="perrilla atún">
+                </div>
+                <div class="imagen">
+                    <h3>Yo</h3>
+                    <img src="imagenes/yo.jpeg" alt="yo, laura">
+                </div>
+                <div class="imagen">
+                    <h3>Comidilla</h3>
+                    <img src="imagenes/comida.jpeg" alt="comidilla">
+                </div>
+                <div id="descripcion">
+                    <p><span>Me presento...</span><br><br>Me gustan mucho los animales, sobretodo los perrillos. Esa perrilla que sale en la 
+                        primera foto se llama <span>Atún</span> y tiene solo un añito. También me gusta mucho viajar, y por ahora mi lugar 
+                        favorito de los que he ido ha sido <span>Memmingen, Alemania.</span> También me gusta mucho cocinar y comer, aunque 
+                        la tostada de la foto no la he hecho yo.
+                        Otros hobbies que tengo son ir al <span>gym, ver series y tatuar.</span> Mi color favorito es el amarillo y mi número 
+                        favorito el 7. Antes de este grado, hice un año y un poquito de Química, pero el sistema educativo universitario 
+                        no me motivaba y me metí aquí por probar suerte ya que luego el mundo laboral pinta muy bien. Afortunadamente me 
+                        ha gustado mucho :)
+                    </p>
+                </div>
+            </section>
+        </div>
 
     </main>
 
