--- a/PF/inicio.html
+++ b/PF/inicio.html
@@ -7,6 +7,9 @@
     <title>Restaurante El chile verde</title>
     <link rel="stylesheet" href="estilos/general.css" type="text/CSS">
     <link rel="stylesheet" href="estilos/inicio.css" type="text/CSS">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Yuji+Mai&display=swap" rel="stylesheet">
 </head>
 
 <body>
