--- a/PF/carta.html
+++ b/PF/carta.html
@@ -66,7 +66,7 @@
                     </tr>
                 </table>
         
-                <table id="bebidas">
+                <table>
                     <caption><h2>Bebidas</h2></caption>
                     <tr>
                         <th>Bebidas</th>
@@ -116,16 +116,14 @@
             </div>
         </section>
 
-        <section>
-            <div id="platos_estrella">
-                <h1>NUESTROS PLATOS ESTRELLA</h1>
-                <h2>Tacos al pastor</h2>
-                <img src="imagenes/platoestrella1.jpg" alt="plato estrella 1">
-                <h2>Enchiladas suizas</h2>
-                <img src="imagenes/platoestrella2.webp" alt="plato estrella 2">
-                <h2>Pozole rojo</h2>
-                <img src="imagenes/platoestrella3.jpg" alt="plato estrella 3">
-            </div>
+        <section id="platos_estrella">
+            <h1>NUESTROS PLATOS ESTRELLA</h1>
+            <h2>Tacos al pastor</h2>
+            <img src="imagenes/platoestrella1.jpg" alt="plato estrella 1">
+            <h2>Enchiladas suizas</h2>
+            <img src="imagenes/platoestrella2.webp" alt="plato estrella 2">
+            <h2>Pozole rojo</h2>
+            <img src="imagenes/platoestrella3.jpg" alt="plato estrella 3">
         </section>
 
         <div>
