--- a/PF/equipo.html
+++ b/PF/equipo.html
@@ -87,8 +87,8 @@
                     <img src="imagenes/comida.jpeg" alt="comidilla">
                 </div>
                 <div id="descripcion">
-                    <p><span>Me presento...</span><br><br>Me gustan mucho los animales, sobretodo los perrillos. Esa perrilla que sale en la 
-                        primera foto se llama <span>Atún</span> y tiene solo un añito. También me gusta mucho viajar, y por ahora mi lugar 
+                    <p><span>Me presento...</span><br><br>Me gustan mucho los animales, sobretodo los perrillos. Mi perrilla, que sale en la 
+                        primera foto, se llama <span>Atún</span> y tiene solo un añito. También me gusta mucho viajar, y por ahora mi lugar 
                         favorito de los que he ido ha sido <span>Memmingen, Alemania.</span> También me gusta mucho cocinar y comer, aunque 
                         la tostada de la foto no la he hecho yo.
                         Otros hobbies que tengo son ir al <span>gym, ver series y tatuar.</span> Mi color favorito es el amarillo y mi número 
