--- a/PF/eventos.html
+++ b/PF/eventos.html
@@ -34,7 +34,7 @@
 
     <main>
         
-        <div id="contenedor">
+        <div>
             <div class="nombre">
                 <h1>CUMPLEAÑOS</h1>
             </div>
