--- a/PF/reserva.html
+++ b/PF/reserva.html
@@ -31,7 +31,7 @@
 
     <main>
         
-        <div id="contenedor">
+        <div>
 
             <section>
                 <h2>HAZ TU RESERVA</h2>
